Complete student profile and resume management module